package Enums;

public enum Direction {
    UP,
    DOWN,
    STOP
}
