package Models;

public class Time {

}
